--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
     
     <dependencies>
         <!-- Spring Boot Starters -->
+        <!-- JPA API for Hibernate/Spring Boot -->
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
